--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Explore</title>
 </head>
+
 <body>
-    
+
+    <button type="button" class="btn btn-primary">Button</button>
+
 </body>
+
 </html>
