--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <title>Explore</title>
 </head>
 
 <body>
 
-    <button type="button" class="btn btn-primary">Button</button>
+    <div class="social-buttons">
+        <button type="button" class="social-btn btn btn-primary">
+            <i class="fab fa-facebook-f"></i>
+        </button>
+
+        <button type="button" class="social-btn btn btn-primary">
+            <i class="fab fa-instagram"></i>
+        </button>
+    </div>
 
 </body>
 
