sidebar and main header created and styled, sass variables reassigned

--- a/index.html
+++ b/index.html
@@ -11,15 +11,32 @@
 </head>
 
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-4 sidebar">
+                <div class="row">
+                    <div class="col-8 offset-5 header-section">
+                        <h1>Explore</h1>
+                        <div class="detail-sub-section">
+                            <button type="button" class="detail-btn btn btn-primary" onclick="togglePopup()">
+                                <i class="fas fa-plus"></i>
+                            </button>
+                            More Details
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <div class="social-buttons">
-        <button type="button" class="social-btn btn btn-primary">
-            <i class="fab fa-facebook-f"></i>
-        </button>
+        <div class="social-buttons">
+            <button type="button" class="social-btn btn btn-primary">
+                <i class="fab fa-facebook-f"></i>
+            </button>
 
-        <button type="button" class="social-btn btn btn-primary">
-            <i class="fab fa-instagram"></i>
-        </button>
+            <button type="button" class="social-btn btn btn-primary">
+                <i class="fab fa-instagram"></i>
+            </button>
+        </div>
     </div>
 
 </body>
