popup card created and styled, animation css written

--- a/index.html
+++ b/index.html
@@ -11,6 +11,38 @@
 </head>
 
 <body>
+    <div class="popup-card" id="explore-popup">
+        <div class="content">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex justify-content-end">
+                        <button class="close-btn btn btn-primary" onclick="togglePopup()">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </div>
+                    <h2 class="card-title">Explore</h2>
+                    <img id="underline" src="assets/udundi_underline.png" alt="underline" />
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet
+                        consectetur adipiscing elit ut. Nulla posuere sollicitudin aliquam ultrices
+                        sagittis orci a scelerisque. Dignissim convallis aenean et tortor at risus.
+                        Mi tempus imperdiet nulla malesuada. Tempus imperdiet nulla malesuada pellentesque.
+                        Pharetra magna ac placerat vestibulum lectus mauris. Sem fringilla ut morbi
+                        tincidunt augue interdum velit euismod in. Eget gravida cum sociis natoque penatibus
+                        et magnis dis parturient. Tincidunt arcu non sodales neque sodales ut etiam sit amet.
+                        Lectus urna duis convallis convallis tellus id interdum. At volutpat diam ut venenatis
+                        tellus in metus. Eleifend donec pretium vulputate sapien nec. Tempor nec feugiat nisl
+                        pretium.
+                    </p>
+                    <a href="https://www.facebook.com/DoraTheExplorer/" target="_blank" class="btn read-btn">
+                        READ MORE
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-4 sidebar">
