--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex justify-content-end">
-                        <button class="close-btn btn btn-primary" onclick="togglePopup()">
+                        <button class="close-btn btn btn-primary" onclick="closeWindow()">
                             <i class="fas fa-times"></i>
                         </button>
                     </div>
@@ -48,7 +48,7 @@
             <div class="col-4 sidebar">
                 <div class="row">
                     <div class="col-8 offset-5 header-section">
-                        <h1>Explore</h1>
+                        <h1 id="main-header">Explore</h1>
                         <div class="detail-sub-section">
                             <button type="button" class="detail-btn btn btn-primary" onclick="togglePopup()">
                                 <i class="fas fa-plus"></i>
