card class edit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="popup-card" id="explore-popup">
         <div class="content">
-            <div class="card">
+            <div class="detail-card card">
                 <div class="card-body">
                     <div class="d-flex justify-content-end">
                         <button class="close-btn btn btn-primary" onclick="closeWindow()">
